@@ -11,8 +11,8 @@ version_str = '%s.%s.%s' % (version[0], version[1], version[2])
 
 def main_is_frozen():
    return (hasattr(sys, "frozen") or # new py2exe
-           hasattr(sys, "importers") # old py2exe
-           or imp.is_frozen("__main__")) # tools/freeze
+           hasattr(sys, "importers") or # old py2exe
+           imp.is_frozen("__main__")) # tools/freeze
 
 
 import pygtk
