@@ -15,14 +15,17 @@
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
 import os, sys
-import bauble.paths as paths
-import bauble.utils as utils
+
+try:
+    import bauble.paths as paths
+    import bauble.utils as utils
+except ImportError:
+    print "can't import bauble module"
 
 #from bauble.utils.debug import debug
 #debug.enable = True
 
 if sys.platform == "win32":
-    pass
     sys.path.append(paths.lib_dir() + os.sep + "lib" + os.sep + "win32")
     os.environ["PATH"] += paths.main_dir() + os.pathsep +  "lib" + os.sep + \
                           "win32"
